# sql-format

./: README.md  pyproject.toml
src/sql_format/: __init__.py  cli.py  config.py  formatter.py
tests/: test_cli.py  test_config.py  test_formatter.py
tests/fixtures/: sample.sql
